tests/baselines/reference/assignmentCompatWithConstructSignatures4.errors.txt
==== tests/cases/compiler/assignmentCompatWithConstructSignatures4.ts (6 errors) ====
    // checking assignment compatibility relations for function types.
    
    module Errors {
        class Base { foo: string; }
        class Derived extends Base { bar: string; }
        class Derived2 extends Derived { baz: string; }
        class OtherDerived extends Base { bing: string; }
    
        module WithNonGenericSignaturesInBaseType {
            // target type with non-generic call signatures
            var a2: new (x: number) => string[];
            var a7: new (x: (arg: Base) => Derived) => (r: Base) => Derived2;
            var a8: new (x: (arg: Base) => Derived, y: (arg2: Base) => Derived) => (r: Base) => Derived;
            var a10: new (...x: Base[]) => Base;
            var a11: new (x: { foo: string }, y: { foo: string; bar: string }) => Base;
            var a12: new (x: Array<Base>, y: Array<Derived2>) => Array<Derived>;
            var a14: {
                    new (x: number): number[];
                    new (x: string): string[];
                };
            var a15: new (x: { a: string; b: number }) => number;
            var a16: {
                    new (x: {
                        new (a: number): number;
                        new (a?: number): number;
                    }): number[];
                    new (x: {
                        new (a: boolean): boolean;
                        new (a?: boolean): boolean;
                    }): boolean[];
                };
            var a17: {
                    new (x: {
                        new <T extends Derived>(a: T): T;
                        new <T extends Base>(a: T): T;
                    }): any[];
                    new (x: {
                        new <T extends Derived2>(a: T): T;
                        new <T extends Base>(a: T): T;
                    }): any[];
                };
    
            var b2: new <T, U>(x: T) => U[]; 
            a2 = b2; // ok
            b2 = a2; // ok
    
            var b7: new <T extends Base, U extends Derived, V extends Derived2>(x: (arg: T) => U) => (r: T) => V;
            a7 = b7; // ok
            b7 = a7; // ok
    
            var b8: new <T extends Base, U extends Derived>(x: (arg: T) => U, y: (arg2: { foo: number; }) => U) => (r: T) => U; 
            a8 = b8; // error, type mismatch
            ~~
!!! assignmentCompatWithConstructSignatures4.ts(52,9): error TS2012: Cannot convert 'new<T extends Base, U extends Derived>(x: (arg: T) => U, y: (arg2: { foo: number; }) => U) => (r: T) => U' to 'new(x: (arg: Base) => Derived, y: (arg2: Base) => Derived) => (r: Base) => Derived':
!!! 	Construct signatures of types 'new<T extends Base, U extends Derived>(x: (arg: T) => U, y: (arg2: { foo: number; }) => U) => (r: T) => U' and 'new(x: (arg: Base) => Derived, y: (arg2: Base) => Derived) => (r: Base) => Derived' are incompatible:
!!! 		Call signatures of types '(arg2: { foo: number; }) => any' and '(arg2: Base) => Derived' are incompatible:
!!! 			Types of property 'foo' of types '{ foo: number; }' and 'Base' are incompatible.
!!! 			Types of property 'foo' of types 'Base' and '{ foo: number; }' are incompatible.
!!! 		Call signatures of types '(arg2: Base) => Derived' and '(arg2: { foo: number; }) => any' are incompatible:
!!! 			Types of property 'foo' of types 'Base' and '{ foo: number; }' are incompatible.
!!! 			Types of property 'foo' of types '{ foo: number; }' and 'Base' are incompatible.
            b8 = a8; // error
            ~~
!!! assignmentCompatWithConstructSignatures4.ts(53,9): error TS2012: Cannot convert 'new(x: (arg: Base) => Derived, y: (arg2: Base) => Derived) => (r: Base) => Derived' to 'new<T extends Base, U extends Derived>(x: (arg: T) => U, y: (arg2: { foo: number; }) => U) => (r: T) => U':
!!! 	Construct signatures of types 'new(x: (arg: Base) => Derived, y: (arg2: Base) => Derived) => (r: Base) => Derived' and 'new<T extends Base, U extends Derived>(x: (arg: T) => U, y: (arg2: { foo: number; }) => U) => (r: T) => U' are incompatible:
!!! 		Call signatures of types '(arg2: Base) => Derived' and '(arg2: { foo: number; }) => any' are incompatible:
!!! 			Types of property 'foo' of types 'Base' and '{ foo: number; }' are incompatible.
!!! 			Types of property 'foo' of types '{ foo: number; }' and 'Base' are incompatible.
!!! 		Call signatures of types '(arg2: { foo: number; }) => any' and '(arg2: Base) => Derived' are incompatible:
!!! 			Types of property 'foo' of types '{ foo: number; }' and 'Base' are incompatible.
!!! 			Types of property 'foo' of types 'Base' and '{ foo: number; }' are incompatible.
    
            
            var b10: new <T extends Derived>(...x: T[]) => T; 
            a10 = b10; // ok
            b10 = a10; // ok
    
            var b11: new <T extends Derived>(x: T, y: T) => T; 
            a11 = b11; // ok
            b11 = a11; // ok
    
            var b12: new <T extends Array<Derived2>>(x: Array<Base>, y: Array<Base>) => T; 
            a12 = b12; // ok
            b12 = a12; // ok
    
            var b15: new <T>(x: { a: T; b: T }) => T; 
            a15 = b15; // ok
            b15 = a15; // ok
    
            var b15a: new <T extends Base>(x: { a: T; b: T }) => number; 
            a15 = b15a; // ok
            b15a = a15; // ok
    
            var b16: new <T>(x: (a: T) => T) => T[];
            a16 = b16; // error
            ~~~
!!! assignmentCompatWithConstructSignatures4.ts(77,9): error TS2012: Cannot convert 'new<T>(x: (a: T) => T) => T[]' to '{ new(x: { new(a: number): number; new(a?: number): number; }): number[]; new(x: { new(a: boolean): boolean; new(a?: boolean): boolean; }): boolean[]; }':
!!! 	Construct signatures of types 'new<T>(x: (a: T) => T) => T[]' and '{ new(x: { new(a: number): number; new(a?: number): number; }): number[]; new(x: { new(a: boolean): boolean; new(a?: boolean): boolean; }): boolean[]; }' are incompatible:
!!! 		Type '{ new(a: number): number; new(a?: number): number; }' requires a construct signature, but type '(a: any) => any' lacks one.
!!! 		Type '(a: any) => any' requires a call signature, but type '{ new(a: number): number; new(a?: number): number; }' lacks one.
            b16 = a16; // error
            ~~~
!!! assignmentCompatWithConstructSignatures4.ts(78,9): error TS2012: Cannot convert '{ new(x: { new(a: number): number; new(a?: number): number; }): number[]; new(x: { new(a: boolean): boolean; new(a?: boolean): boolean; }): boolean[]; }' to 'new<T>(x: (a: T) => T) => T[]':
!!! 	Construct signatures of types '{ new(x: { new(a: number): number; new(a?: number): number; }): number[]; new(x: { new(a: boolean): boolean; new(a?: boolean): boolean; }): boolean[]; }' and 'new<T>(x: (a: T) => T) => T[]' are incompatible.
    
            var b17: new <T>(x: (a: T) => T) => any[];
            a17 = b17; // error
            ~~~
!!! assignmentCompatWithConstructSignatures4.ts(81,9): error TS2012: Cannot convert 'new<T>(x: (a: T) => T) => any[]' to '{ new(x: { new<T extends Derived>(a: T): T; new<T extends Base>(a: T): T; }): any[]; new(x: { new<T extends Derived2>(a: T): T; new<T extends Base>(a: T): T; }): any[]; }':
!!! 	Construct signatures of types 'new<T>(x: (a: T) => T) => any[]' and '{ new(x: { new<T extends Derived>(a: T): T; new<T extends Base>(a: T): T; }): any[]; new(x: { new<T extends Derived2>(a: T): T; new<T extends Base>(a: T): T; }): any[]; }' are incompatible:
!!! 		Type '{ new<T extends Derived>(a: T): T; new<T extends Base>(a: T): T; }' requires a construct signature, but type '(a: any) => any' lacks one.
!!! 		Type '(a: any) => any' requires a call signature, but type '{ new<T extends Derived>(a: T): T; new<T extends Base>(a: T): T; }' lacks one.
            b17 = a17; // error
            ~~~
!!! assignmentCompatWithConstructSignatures4.ts(82,9): error TS2012: Cannot convert '{ new(x: { new<T extends Derived>(a: T): T; new<T extends Base>(a: T): T; }): any[]; new(x: { new<T extends Derived2>(a: T): T; new<T extends Base>(a: T): T; }): any[]; }' to 'new<T>(x: (a: T) => T) => any[]':
!!! 	Construct signatures of types '{ new(x: { new<T extends Derived>(a: T): T; new<T extends Base>(a: T): T; }): any[]; new(x: { new<T extends Derived2>(a: T): T; new<T extends Base>(a: T): T; }): any[]; }' and 'new<T>(x: (a: T) => T) => any[]' are incompatible.
        }
    
        module WithGenericSignaturesInBaseType {
            // target type has generic call signature
            var a2: new <T>(x: T) => T[];
            var b2: new <T>(x: T) => string[];
            a2 = b2; // ok
            b2 = a2; // ok
    
            // target type has generic call signature
            var a3: new <T>(x: T) => string[];
            var b3: new <T>(x: T) => T[]; 
            a3 = b3; // ok
            b3 = a3; // ok
        }
    }